RESOLVED FIXED147423
Preview should not start if touch handler prevents default
https://bugs.webkit.org/show_bug.cgi?id=147423
Summary Preview should not start if touch handler prevents default
Enrica Casucci
Reported 2015-07-29 15:44:35 PDT
Preview should be treated like the action menu on links. If the page prevents default, we should not preview. rdar://problem/22061043
Attachments
Patch (1.58 KB, patch)
2015-07-29 15:49 PDT, Enrica Casucci
thorton: review+
Enrica Casucci
Comment 1 2015-07-29 15:49:07 PDT
Enrica Casucci
Comment 2 2015-07-29 16:05:01 PDT
Committed revision 187565.
Note You need to log in before you can comment on or make changes to this bug.