Preview should not start if touch handler prevents default. https://bugs.webkit.org/show_bug.cgi?id=147423 rdar://problem/22061043

Reviewed by Tim Horton.

We need to check if _highlightLongPressCanClick has not been reset before
we allow the preview. It can be reset by a touch handler preventing default.

* UIProcess/ios/WKContentViewInteraction.mm:
(-[WKContentView _interactionShouldBeginFromPreviewItemController:forPosition:]):



Canonical link: https://commits.webkit.org/165510@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@187565 268f45cc-cd09-0410-ab3c-d52691b4dbfc